src/objects/Procedure_Line_Item__c.object
<CustomObject>
    <description>Conjunction object to link Procedures to Interactions.</description>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount on Procedure</description>
        <label>Discount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <description>Sale Price times quantity</description>
        <formula>Sale_Price__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>The List Cost of the Procedure</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <description>What procedure are you adding to the Interaction</description>
        <label>Procedure</label>
        <referenceTo>Procedure_Catalog__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>How many</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <description>if there is a sales on the procedure.</description>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <label>Treatment</label>
        <referenceTo>Treatment__c</referenceTo>
        <relationshipLabel>Procedure Line Items</relationshipLabel>
        <relationshipName>Procedure_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Procedure Line Item</label>
    <nameField>
        <displayFormat>PLI{000000000}</displayFormat>
        <label>Procedure Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedure Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>